CodeGen from PR 25570 in Azure/azure-rest-api-specs Merge 4dc6d8917981d9939bbc6630487ffd50b9dee18d into c320f58d8643a309c126dd4ec5fdc6737fccd981

--- a/sdk/contentsafety/azure-ai-contentsafety/tsp-location.yaml
+++ b/sdk/contentsafety/azure-ai-contentsafety/tsp-location.yaml
@@ -1,3 +1,5 @@
 directory: specification/cognitiveservices/ContentSafety
-commit: 17c41d0c4a96294bf563b009c9c72093963b529f
 repo: Azure/azure-rest-api-specs
+additionalDirectories: []
+commit: 574ec7146e88776cca22da4206b327cf5d70e5f5
+
