--- a/sdk/cognitiveservices/ci.yml
+++ b/sdk/cognitiveservices/ci.yml
@@ -69,3 +69,5 @@ extends:
       safeName: azurecognitiveservicesvisionface
     - name: azure-mgmt-cognitiveservices
       safeName: azuremgmtcognitiveservices
+    - name: azure-ai-vision-imageanalysis
+      safeName: azureaivisionimageanalysis
