CodeGen from PR 26102 in Azure/azure-rest-api-specs Merge 2a6a713905b89d6377cbc7de59ee50b8b5ca19d8 into be3cd97ad8822cfa8c85891ce8d52ecd90ce2d7c

--- a/sdk/contentsafety/azure-ai-contentsafety/tsp-location.yaml
+++ b/sdk/contentsafety/azure-ai-contentsafety/tsp-location.yaml
@@ -1,3 +1,5 @@
-directory: specification/cognitiveservices/ContentSafety
-commit: 17c41d0c4a96294bf563b009c9c72093963b529f
+commit: 924a98b9c8d71496dccd02b92fecf3902d2ea025
 repo: Azure/azure-rest-api-specs
+directory: specification/cognitiveservices/ContentSafety
+additionalDirectories: []
+
