CodeGen from PR 25498 in Azure/azure-rest-api-specs Merge 7994379c91eac3fc84e2165a10134a2c874ee242 into fa64058384cb457552f54428f32667d384b794d4

--- a/sdk/contentsafety/azure-ai-contentsafety/tsp-location.yaml
+++ b/sdk/contentsafety/azure-ai-contentsafety/tsp-location.yaml
@@ -1,3 +1,5 @@
-directory: specification/cognitiveservices/ContentSafety
-commit: 17c41d0c4a96294bf563b009c9c72093963b529f
+additionalDirectories: []
+commit: 1e4276e43ef274ccf739c9d45eafd5c5a3bb970b
 repo: Azure/azure-rest-api-specs
+directory: specification/cognitiveservices/ContentSafety
+
