CodeGen from PR 26258 in Azure/azure-rest-api-specs Merge 62f12cede3268fc90f26e0246052cc4e30c38c31 into 3d59aae5716739a772ed9f1c5376f0d9005e1c4e

--- a/sdk/contentsafety/azure-ai-contentsafety/tsp-location.yaml
+++ b/sdk/contentsafety/azure-ai-contentsafety/tsp-location.yaml
@@ -1,3 +1,5 @@
-directory: specification/cognitiveservices/ContentSafety
-commit: 17c41d0c4a96294bf563b009c9c72093963b529f
 repo: Azure/azure-rest-api-specs
+additionalDirectories: []
+directory: specification/cognitiveservices/ContentSafety
+commit: 004df4b91067d268ec870b2c7c759048b9914869
+
