--- a/sdk/contentsafety/azure-ai-contentsafety/tsp-location.yaml
+++ b/sdk/contentsafety/azure-ai-contentsafety/tsp-location.yaml
@@ -1,3 +1,5 @@
 directory: specification/cognitiveservices/ContentSafety
-commit: 17c41d0c4a96294bf563b009c9c72093963b529f
+commit: 2264fd97e2fd8e89f2db2fb39cc44f2808758d41
+additionalDirectories: []
 repo: Azure/azure-rest-api-specs
+
