CodeGen from PR 25958 in Azure/azure-rest-api-specs Merge 02cbb5abc20cf16ea73b3a952e4ca9de17f6227e into fa0011c95ee2903e69b5de9acb9888d82eae30c7

--- a/sdk/contentsafety/azure-ai-contentsafety/tsp-location.yaml
+++ b/sdk/contentsafety/azure-ai-contentsafety/tsp-location.yaml
@@ -1,3 +1,5 @@
-directory: specification/cognitiveservices/ContentSafety
-commit: 17c41d0c4a96294bf563b009c9c72093963b529f
+additionalDirectories: []
 repo: Azure/azure-rest-api-specs
+directory: specification/cognitiveservices/ContentSafety
+commit: e794a040efdd683ddc3c4ed7aa6a3ea6f685fdba
+
