CodeGen from PR 26435 in Azure/azure-rest-api-specs Merge b0efc8943fc61a2e2d18dae8071e3799f581c37d into 5ae522bc106bf8609c6cb379e584aa3e0e2639f3

--- a/sdk/contentsafety/azure-ai-contentsafety/tsp-location.yaml
+++ b/sdk/contentsafety/azure-ai-contentsafety/tsp-location.yaml
@@ -1,3 +1,5 @@
-directory: specification/cognitiveservices/ContentSafety
-commit: 17c41d0c4a96294bf563b009c9c72093963b529f
+commit: c5c6bb8cf88c9061f8874b17152f111f8c17efb1
 repo: Azure/azure-rest-api-specs
+additionalDirectories: []
+directory: specification/cognitiveservices/ContentSafety
+
