--- a/sdk/contentsafety/azure-ai-contentsafety/tsp-location.yaml
+++ b/sdk/contentsafety/azure-ai-contentsafety/tsp-location.yaml
@@ -1,3 +1,5 @@
-directory: specification/cognitiveservices/ContentSafety
-commit: 17c41d0c4a96294bf563b009c9c72093963b529f
+commit: 5d78b3faf65da3a744aed3c451ba36fcc62f7796
 repo: Azure/azure-rest-api-specs
+directory: specification/cognitiveservices/ContentSafety
+additionalDirectories: []
+
