CodeGen from PR 26467 in Azure/azure-rest-api-specs Merge 5396aa0ffaf81df07ef70e84f54f2c1bc1dc70aa into ceffc2870986ab280d7ee7e056297ca5b449abed

--- a/sdk/contentsafety/azure-ai-contentsafety/tsp-location.yaml
+++ b/sdk/contentsafety/azure-ai-contentsafety/tsp-location.yaml
@@ -1,3 +1,5 @@
+commit: f6c1b04103261fe454b4d8402b0cca082831fbee
 directory: specification/cognitiveservices/ContentSafety
-commit: 17c41d0c4a96294bf563b009c9c72093963b529f
 repo: Azure/azure-rest-api-specs
+additionalDirectories: []
+
