CodeGen from PR 26203 in Azure/azure-rest-api-specs Merge ce96a721d6bffa72dada8a998dee55f4c32ad0ef into b594fd4145904c9bbd018f4a2ddea75c7134aee7

--- a/sdk/contentsafety/azure-ai-contentsafety/tsp-location.yaml
+++ b/sdk/contentsafety/azure-ai-contentsafety/tsp-location.yaml
@@ -1,3 +1,5 @@
-directory: specification/cognitiveservices/ContentSafety
-commit: 17c41d0c4a96294bf563b009c9c72093963b529f
+commit: d658fcffcdc7495b0a2a4e390773f1c1d23e78c0
+additionalDirectories: []
 repo: Azure/azure-rest-api-specs
+directory: specification/cognitiveservices/ContentSafety
+
