CodeGen from PR 26685 in Azure/azure-rest-api-specs Merge 421a1bc35d8a3502ed0188bf0fcdbba7aa4324e7 into 90a65cb3135d42438a381eb8bb5461a2b99b199f

--- a/sdk/contentsafety/azure-ai-contentsafety/tsp-location.yaml
+++ b/sdk/contentsafety/azure-ai-contentsafety/tsp-location.yaml
@@ -1,3 +1,5 @@
-directory: specification/cognitiveservices/ContentSafety
-commit: 17c41d0c4a96294bf563b009c9c72093963b529f
 repo: Azure/azure-rest-api-specs
+additionalDirectories: []
+commit: e33448b1b30f6ed9b814e62b4efd80cb170226b5
+directory: specification/cognitiveservices/ContentSafety
+
