CodeGen from PR 26880 in Azure/azure-rest-api-specs Merge 09f175866bae05ad4c888a9f934bb285c1820abc into 9c7722c82ca6c894e3d5931f074c4f025598af08

--- a/sdk/contentsafety/azure-ai-contentsafety/tsp-location.yaml
+++ b/sdk/contentsafety/azure-ai-contentsafety/tsp-location.yaml
@@ -1,3 +1,5 @@
+additionalDirectories: []
+commit: ef76b5cbcee099bb7855792bd73173454ac51081
 directory: specification/cognitiveservices/ContentSafety
-commit: 17c41d0c4a96294bf563b009c9c72093963b529f
 repo: Azure/azure-rest-api-specs
+
