CodeGen from PR 26702 in Azure/azure-rest-api-specs Merge cbc61f46603b3c45231e411b4b1a721319408db2 into 30d711afc12628f35811e9f6eedeb7246e53264f

--- a/sdk/purview/ci.yml
+++ b/sdk/purview/ci.yml
@@ -42,3 +42,5 @@ extends:
       safeName: azurepurviewworkflow
     - name: azure-purview-sharing
       safeNAme: azurepurviewsharing
+    - name: azure-analytics-purview-datamap
+      safeName: azureanalyticspurviewdatamap
