CodeGen from PR 26911 in Azure/azure-rest-api-specs Merge f007d69e1875b03ebbf6aed4d71b3a67f4caba1a into b8c74fd80b415fa1ebb6fa787d454694c39e0fd5

--- a/sdk/contentsafety/azure-ai-contentsafety/tsp-location.yaml
+++ b/sdk/contentsafety/azure-ai-contentsafety/tsp-location.yaml
@@ -1,3 +1,5 @@
-directory: specification/cognitiveservices/ContentSafety
-commit: 17c41d0c4a96294bf563b009c9c72093963b529f
 repo: Azure/azure-rest-api-specs
+commit: 96809b2ae082df24ae0834f7bb08d9b030c4193b
+directory: specification/cognitiveservices/ContentSafety
+additionalDirectories: []
+
