CodeGen from PR 27335 in Azure/azure-rest-api-specs Merge 67ac01800cb9689094c0358f4874b84a8e020fca into fb60ae9727c187021fbc59b9d7a068ab68dbfd31

--- a/sdk/communication/ci.yml
+++ b/sdk/communication/ci.yml
@@ -51,4 +51,5 @@ extends:
     - name: azure-communication-jobrouter
       safeName: azurecommunicationjobrouter
     - name: azure-communication-callautomation
-      safeName: azurecommunicationcallautomation
+      safeName: azurecommunicationcallautomation    - name: azure-communication-messages
+      safeName: azurecommunicationmessages
