--- a/sdk/purview/ci.yml
+++ b/sdk/purview/ci.yml
@@ -42,3 +42,5 @@ extends:
       safeName: azurepurviewworkflow
     - name: azure-purview-sharing
       safeNAme: azurepurviewsharing
+    - name: azure-purview-datamap
+      safeName: azurepurviewdatamap
