CodeGen from PR 27953 in Azure/azure-rest-api-specs Merge 2163cde3427d03e074f5480b2f9099ec9aafd099 into 77df3b1680a95566a3e6a3a2cd07c9a4960b2af3

--- a/sdk/devcenter/azure-developer-devcenter/tsp-location.yaml
+++ b/sdk/devcenter/azure-developer-devcenter/tsp-location.yaml
@@ -1,4 +1,6 @@
-directory: specification/devcenter/DevCenter
-commit: 74e93fc9fb00380250110fba78dadfebeb93cbf1
+commit: d4f64a06da10ecc5f10ae511ea7d4ba01b71a814
+additionalDirectories: []
 repo: Azure/azure-rest-api-specs
+directory: specification/devcenter/DevCenter
 cleanup: true
+
