CodeGen from PR 27725 in Azure/azure-rest-api-specs Merge 254f0e719597a2f922dda19d88c0750d94ebbb9b into 973941b3041a3920b5fb6a2f111dae6005e83d78

--- a/sdk/healthinsights/ci.yml
+++ b/sdk/healthinsights/ci.yml
@@ -42,3 +42,5 @@ extends:
       safeName: azurehealthinsightsradiologyinsights
       skipVerifyChangeLog: true
 
+    - name: azure-healthinsights-patienttimeline
+      safeName: azurehealthinsightspatienttimeline
