CodeGen from PR 27985 in Azure/azure-rest-api-specs Merge e3cd0eee327c3e5fa5470e8182e19a2dc3fdf160 into 0cca8953ec713d8cc0e940c37e865d36b43d18f8

--- a/sdk/sphere/ci.yml
+++ b/sdk/sphere/ci.yml
@@ -32,3 +32,5 @@ extends:
     Artifacts:
     - name: azure-mgmt-sphere
       safeName: azuremgmtsphere
+    - name: azure-mgmt-spheretest
+      safeName: azuremgmtspheretest
