--- a/sdk/devcenter/azure-developer-devcenter/tsp-location.yaml
+++ b/sdk/devcenter/azure-developer-devcenter/tsp-location.yaml
@@ -1,4 +1,6 @@
 directory: specification/devcenter/DevCenter
-commit: 74e93fc9fb00380250110fba78dadfebeb93cbf1
 repo: Azure/azure-rest-api-specs
 cleanup: true
+additionalDirectories: []
+commit: 95618f7666ff2959919f3a2d3fba5ba60dec1a40
+
