CodeGen from PR 28065 in Azure/azure-rest-api-specs Merge 7bf4f5a904e60026b142072ca57291d6391cd37c into 42e63ea88548151222ce3efa1bfce02d879fad6b

--- a/sdk/quantum/ci.yml
+++ b/sdk/quantum/ci.yml
@@ -29,4 +29,5 @@ extends:
     ServiceDirectory: quantum
     Artifacts:
     - name: azure-mgmt-quantum
-      safeName: azuremgmtquantum
+      safeName: azuremgmtquantum    - name: azure-quantum
+      safeName: azurequantum
