CodeGen from PR 28324 in Azure/azure-rest-api-specs Merge 796f85a23db95067301aa65c012081b2ab4fbba5 into 64813b901ca3dc81a9ce3c7b5c6d7430c78aa8a5

--- a/sdk/devcenter/azure-developer-devcenter/tsp-location.yaml
+++ b/sdk/devcenter/azure-developer-devcenter/tsp-location.yaml
@@ -1,4 +1,6 @@
-directory: specification/devcenter/DevCenter
-commit: 74e93fc9fb00380250110fba78dadfebeb93cbf1
-repo: Azure/azure-rest-api-specs
 cleanup: true
+directory: specification/devcenter/DevCenter
+commit: a14151e2fc9d345bcfd6ab3910af75498e9acdfc
+additionalDirectories: []
+repo: Azure/azure-rest-api-specs
+
