--- a/sdk/ai/ci.yml
+++ b/sdk/ai/ci.yml
@@ -49,3 +49,5 @@ extends:
       safeName: azureaigenerative
     - name: azure-ai-resources
       safeName: azureairesources
+    - name: azure-ai-resources-autogen
+      safeName: azureairesourcesautogen
