--- a/sdk/devcenter/azure-developer-devcenter/tsp-location.yaml
+++ b/sdk/devcenter/azure-developer-devcenter/tsp-location.yaml
@@ -1,4 +1,6 @@
 directory: specification/devcenter/DevCenter
-commit: 74e93fc9fb00380250110fba78dadfebeb93cbf1
-repo: Azure/azure-rest-api-specs
 cleanup: true
+additionalDirectories: []
+repo: Azure/azure-rest-api-specs
+commit: 75b3fde34ef006d3a6bf5574c626c5a46994fd30
+
