--- a/sdk/devcenter/azure-developer-devcenter/tsp-location.yaml
+++ b/sdk/devcenter/azure-developer-devcenter/tsp-location.yaml
@@ -1,4 +1,6 @@
-directory: specification/devcenter/DevCenter
-commit: 74e93fc9fb00380250110fba78dadfebeb93cbf1
+additionalDirectories: []
 repo: Azure/azure-rest-api-specs
 cleanup: true
+commit: 872794fd110d39644d1dfe53943c63841191a69c
+directory: specification/devcenter/DevCenter
+
