--- a/sdk/devcenter/azure-developer-devcenter/tsp-location.yaml
+++ b/sdk/devcenter/azure-developer-devcenter/tsp-location.yaml
@@ -1,4 +1,6 @@
-directory: specification/devcenter/DevCenter
-commit: 74e93fc9fb00380250110fba78dadfebeb93cbf1
-repo: Azure/azure-rest-api-specs
 cleanup: true
+directory: specification/devcenter/DevCenter
+commit: a3204196d365339358bcda3cc9c4b21dcb4b9e70
+additionalDirectories: []
+repo: Azure/azure-rest-api-specs
+
