CodeGen from PR 28735 in Azure/azure-rest-api-specs Merge 72c4fb21bc47a8d1606528c64ba1abaac443ddbe into 71a0c7adf2a6e169ab9a33c7cf36bb93db083e86

--- a/sdk/purview/azure-purview-datamap/tsp-location.yaml
+++ b/sdk/purview/azure-purview-datamap/tsp-location.yaml
@@ -1,4 +1,5 @@
-directory: specification/purview/Azure.Analytics.Purview.DataMap
-commit: e4dd3e7e4d0402a81b2bef7dd754d3e46e8a8ab5
 repo: Azure/azure-rest-api-specs
-additionalDirectories:
+commit: aba70096aae66df6baf185f2c1ad47dc05b62684
+directory: specification/purview/Azure.Analytics.Purview.DataMap
+additionalDirectories: []
+
