CodeGen from PR 28531 in Azure/azure-rest-api-specs Merge f0ff252ee7b9c11a75fac951b6bb63877df2ed52 into 982cef7f4fd07c78dd5118bd104fb9091f18f32f

--- a/sdk/devcenter/azure-developer-devcenter/tsp-location.yaml
+++ b/sdk/devcenter/azure-developer-devcenter/tsp-location.yaml
@@ -1,4 +1,6 @@
-directory: specification/devcenter/DevCenter
-commit: 74e93fc9fb00380250110fba78dadfebeb93cbf1
 repo: Azure/azure-rest-api-specs
+directory: specification/devcenter/DevCenter
+commit: b111d162289252b88a9431fa23a1e4c768a771ac
 cleanup: true
+additionalDirectories: []
+
