CodeGen from PR 28774 in Azure/azure-rest-api-specs Merge c9adcfe98942901e42debe5b301bd29e739dce85 into 72f52bc8847a889488da885f40d6871a89e0470b

--- a/sdk/purview/azure-purview-datamap/tsp-location.yaml
+++ b/sdk/purview/azure-purview-datamap/tsp-location.yaml
@@ -1,4 +1,5 @@
-directory: specification/purview/Azure.Analytics.Purview.DataMap
-commit: e4dd3e7e4d0402a81b2bef7dd754d3e46e8a8ab5
 repo: Azure/azure-rest-api-specs
-additionalDirectories:
+additionalDirectories: []
+directory: specification/purview/Azure.Analytics.Purview.DataMap
+commit: 4835ca78af3394fdd92092a6b5a26ba3f11625ee
+
