CodeGen from PR 28778 in Azure/azure-rest-api-specs Merge 2d71f8adcf4d1795233345f299464492b00af1cb into 72f52bc8847a889488da885f40d6871a89e0470b

--- a/sdk/purview/azure-purview-datamap/tsp-location.yaml
+++ b/sdk/purview/azure-purview-datamap/tsp-location.yaml
@@ -1,4 +1,5 @@
+additionalDirectories: []
 directory: specification/purview/Azure.Analytics.Purview.DataMap
-commit: e4dd3e7e4d0402a81b2bef7dd754d3e46e8a8ab5
 repo: Azure/azure-rest-api-specs
-additionalDirectories:
+commit: 48ed0130fd6596f372a6ad57c2cc007063f4c33d
+
