CodeGen from PR 28847 in Azure/azure-rest-api-specs Merge 3e68cfedb0e437e4f73d6c0d831320158f228664 into 1710ec7f391adbf27ec7071d63553f0f476637bc

--- a/sdk/devcenter/azure-developer-devcenter/tsp-location.yaml
+++ b/sdk/devcenter/azure-developer-devcenter/tsp-location.yaml
@@ -1,4 +1,6 @@
-directory: specification/devcenter/DevCenter
-commit: 74e93fc9fb00380250110fba78dadfebeb93cbf1
-repo: Azure/azure-rest-api-specs
+additionalDirectories: []
 cleanup: true
+repo: Azure/azure-rest-api-specs
+directory: specification/devcenter/DevCenter
+commit: 4d5dc7c4638f5e01089f10b8767bd3ef4bdd070f
+
