--- a/sdk/purview/azure-purview-datamap/tsp-location.yaml
+++ b/sdk/purview/azure-purview-datamap/tsp-location.yaml
@@ -1,4 +1,5 @@
 directory: specification/purview/Azure.Analytics.Purview.DataMap
-commit: e4dd3e7e4d0402a81b2bef7dd754d3e46e8a8ab5
+commit: 7abed8c7cfeaf44fdb88f363210d9719152df532
+additionalDirectories: []
 repo: Azure/azure-rest-api-specs
-additionalDirectories:
+
