CodeGen from PR 28851 in Azure/azure-rest-api-specs Merge 0f2c9d240585b462c8198d170f9dfaf8342b61a3 into 12f90a7f0533fa96d75878d721fcac1927ab0498

--- a/sdk/devcenter/azure-developer-devcenter/tsp-location.yaml
+++ b/sdk/devcenter/azure-developer-devcenter/tsp-location.yaml
@@ -1,4 +1,6 @@
+commit: 2461d3fbffc295f1cc0c1af67aa3497840064f3c
 directory: specification/devcenter/DevCenter
-commit: 74e93fc9fb00380250110fba78dadfebeb93cbf1
-repo: Azure/azure-rest-api-specs
 cleanup: true
+repo: Azure/azure-rest-api-specs
+additionalDirectories: []
+
