CodeGen from PR 28860 in Azure/azure-rest-api-specs Merge ce73b75d5acb82578caddd81a8df29ba3a7b0d0a into d4f3374fc56a25acc5442a7efe5aee11413fdfe2

--- a/sdk/devcenter/azure-developer-devcenter/tsp-location.yaml
+++ b/sdk/devcenter/azure-developer-devcenter/tsp-location.yaml
@@ -1,4 +1,6 @@
-directory: specification/devcenter/DevCenter
-commit: 74e93fc9fb00380250110fba78dadfebeb93cbf1
-repo: Azure/azure-rest-api-specs
 cleanup: true
+repo: Azure/azure-rest-api-specs
+additionalDirectories: []
+directory: specification/devcenter/DevCenter
+commit: b1938b19b94aba96a21cac320961ad44b78b26dd
+
