--- a/sdk/devcenter/azure-developer-devcenter/tsp-location.yaml
+++ b/sdk/devcenter/azure-developer-devcenter/tsp-location.yaml
@@ -1,4 +1,6 @@
-directory: specification/devcenter/DevCenter
-commit: 74e93fc9fb00380250110fba78dadfebeb93cbf1
 repo: Azure/azure-rest-api-specs
+directory: specification/devcenter/DevCenter
+commit: ddf4b10983649bbfc219aa828dbbb6b9dfa6f8d9
+additionalDirectories: []
 cleanup: true
+
