--- a/sdk/devcenter/azure-developer-devcenter/tsp-location.yaml
+++ b/sdk/devcenter/azure-developer-devcenter/tsp-location.yaml
@@ -1,4 +1,4 @@
 directory: specification/devcenter/DevCenter
-commit: 74e93fc9fb00380250110fba78dadfebeb93cbf1
+commit: bd1e09408e3407472a84fface189b8414218db05
 repo: Azure/azure-rest-api-specs
-cleanup: true
+additionalDirectories:
