CodeGen from PR 29084 in Azure/azure-rest-api-specs Merge 78a6082abd13a9a9af6f3e307c34064117d569ca into 969c68562c5c4850257c9242a7a64b73c15f110d

--- a/sdk/contentsafety/azure-ai-contentsafety/tsp-location.yaml
+++ b/sdk/contentsafety/azure-ai-contentsafety/tsp-location.yaml
@@ -1,4 +1,4 @@
 directory: specification/cognitiveservices/ContentSafety
-commit: fb39d9813934567c594ca253efff7c5c01a474e8
+commit: caf525088c45365721e01032b4c21f05ce79505e
 repo: Azure/azure-rest-api-specs
-additionalDirectories: []
+additionalDirectories:
