CodeGen from PR 27863 in Azure/azure-rest-api-specs Merge b5b8192d8d4b83d8437a97444d75a6643c303b55 into a542d7d9867b3456a99b076b8040e35fd80c0425

--- a/sdk/devcenter/azure-developer-devcenter/tsp-location.yaml
+++ b/sdk/devcenter/azure-developer-devcenter/tsp-location.yaml
@@ -1,4 +1,4 @@
 directory: specification/devcenter/DevCenter
-commit: 74e93fc9fb00380250110fba78dadfebeb93cbf1
+commit: 469d7af311742fd3996a6431e7c89bf62923028f
 repo: Azure/azure-rest-api-specs
-cleanup: true
+additionalDirectories:
