CodeGen from PR 29107 in Azure/azure-rest-api-specs Merge f0ed73bcb0d7a61a58568075801c4422fc660735 into 9061674ac55af0ec23e12e4f9f505010ab428935

--- a/sdk/vision/ci.yml
+++ b/sdk/vision/ci.yml
@@ -28,4 +28,5 @@ extends:
     TestProxy: true
     Artifacts:
     - name: azure-ai-vision-imageanalysis
-      safeName: azureaivisionimageanalysis
+      safeName: azureaivisionimageanalysis    - name: azure-ai-vision-face
+      safeName: azureaivisionface
