CodeGen from PR 29121 in Azure/azure-rest-api-specs Merge aa114de39d90edae5a808c301a04397af95bc5d9 into 88f9ba778e8611066336aa8713e3205788153913

--- a/sdk/devcenter/azure-developer-devcenter/tsp-location.yaml
+++ b/sdk/devcenter/azure-developer-devcenter/tsp-location.yaml
@@ -1,4 +1,4 @@
 directory: specification/devcenter/DevCenter
-commit: 74e93fc9fb00380250110fba78dadfebeb93cbf1
+commit: ea05402820c853cfb2b63933d36dc4ba61944302
 repo: Azure/azure-rest-api-specs
-cleanup: true
+additionalDirectories:
