--- a/sdk/communication/azure-communication-jobrouter/tsp-location.yaml
+++ b/sdk/communication/azure-communication-jobrouter/tsp-location.yaml
@@ -1,5 +1,4 @@
-repo: Azure/azure-rest-api-specs
-additionalDirectories: []
 directory: specification/communication/Communication.JobRouter
-commit: 1c04f51cbfa195fe177239cf63d00d3539006800
-
+commit: 773f23a2481accb0fb60da27ee9418e091b057ee
+repo: Azure/azure-rest-api-specs
+additionalDirectories:
