CodeGen from PR 29173 in Azure/azure-rest-api-specs Merge b5d512b0bc5892d13cc20034cb6ba18f49eb6af0 into 10c505da678931b4b6497df0e0df9d82c6ca334c

--- a/sdk/contentsafety/azure-ai-contentsafety/tsp-location.yaml
+++ b/sdk/contentsafety/azure-ai-contentsafety/tsp-location.yaml
@@ -1,4 +1,4 @@
 directory: specification/cognitiveservices/ContentSafety
-commit: fb39d9813934567c594ca253efff7c5c01a474e8
+commit: 59dd18f7d8da856dc03c55ea7f8f17c3862d60c9
 repo: Azure/azure-rest-api-specs
-additionalDirectories: []
+additionalDirectories:
